--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user_galleries.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user_galleries.yml
@@ -21,17 +21,18 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"5f3228fb52f3310223f6994187faa2e2"
+      - W/"9e841c22ce96895bdc38adea858295e7"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a51136e9-fd12-42c4-8807-692a7a9a8d7e
+      - 5cde6725-14e6-458f-8822-b30fa2c7d793
       X-Runtime:
-      - '0.016021'
+      - '0.006342'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"10","type":"gallery","attributes":{"user_id":7,"name":"profile","created_at":"2021-04-21T01:21:56.834Z","updated_at":"2021-04-21T01:21:56.834Z","photo_url":null}}]}'
-  recorded_at: Wed, 21 Apr 2021 01:23:12 GMT
+      string: '{"data":[{"id":"16","type":"gallery","attributes":{"user_id":7,"name":"Profile","created_at":"2021-04-22T01:53:56.459Z","updated_at":"2021-04-22T01:53:56.459Z","photo_url":"http://www.example.com"}},{"id":"17","type":"gallery","attributes":{"user_id":7,"name":"test
+        gallery","created_at":"2021-04-22T02:05:38.080Z","updated_at":"2021-04-22T02:05:38.080Z","photo_url":null}}]}'
+  recorded_at: Thu, 22 Apr 2021 02:05:49 GMT
 recorded_with: VCR 6.0.0
